Populated Database and TS Types